--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
 
                     <img class="Rectangle" src="img/Rectangle 2.png" alt="">
             </div>
+      
+            <!-- Our Awesome Portfolio section start -->
 
-</body>
+             <div class="awesome-portfolio">
+                     <p class="text">THE BEST GIFTS</p>
+                     <h3>Our Awesome Portfolio</h3>
+                     <p class="p-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+             </div>
+             
+             <!-- subcriber section start -->
 </html>
