--- a/index.html
+++ b/index.html
@@ -125,4 +125,14 @@
              </div>
              
              <!-- subcriber section start -->
+
+             <div class="subcriber">
+                  <img class="gmail" src="img/Group 61.png" alt="">
+                  <h3 class="subcriber-text">Subscribe Newsletter</h3>
+                  <p class="text-aria">Subscribe NewsletterDolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                   
+                  <input class="input" type="email" placeholder="User@gmail.com">
+                  <button class="lst-btn">subcriber</button>
+             </div>
+    </body>
 </html>
