--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
      
      <!-- banner-area start -->
-
+<main>
      <div class="container">
 
               <div class="banner-area">
@@ -139,7 +139,7 @@
                   <input class="input" type="email" placeholder="User@gmail.com">
                   <button class="lst-btn">subcriber</button>
              </div>
-
+   </main>
 <!-- footer section start -->
            <footer>
                 <div class="footer">
